stratosource/sfdiff/testfiles/rtest/unpackaged/objects/OpportunityPartner__c.object
<CustomObject>
    <description>This is an extension of the Partner relationship on the Opportunity, in order to support custom fields on the many-to-many object.</description>
    <fields>
        <fullName>Legacy_PartnerId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Partner Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>OpportunityPartners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PartnerName__c</fullName>
        <formula>Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerSubTypeName__c</fullName>
        <formula>if(ISBLANK(PartnerType__r.Parent__r.Parent__c),&apos;&apos;,PartnerType__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartnerSubTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerTierName__c</fullName>
        <formula>PartnerTier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Tier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerTier__c</fullName>
        <label>Partner Tier</label>
        <referenceTo>Classification__c</referenceTo>
        <relationshipName>OpportunityPartnersByTier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerTypeName__c</fullName>
        <formula>if(ISBLANK(PartnerType__r.Parent__r.Parent__c),PartnerType__r.Name,PartnerType__r.Parent__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartnerTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <label>Partner Type</label>
        <referenceTo>Classification__c</referenceTo>
        <relationshipName>OpportunityPartnersByType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OpportunityPartners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipType__c</fullName>
        <label>Transaction Role</label>
        <picklist>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Partner</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Auto-Increment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Partner_Required</fullName>
        <active>true</active>
        <description>A partner must be selected.</description>
        <errorConditionFormula>ISNULL(Partner__c)</errorConditionFormula>
        <errorMessage>A partner must be selected.</errorMessage>
    </validationRules>
</CustomObject>